@@ -1,3 +1,6 @@
+Version
++ Removed Kwalitee tests
+
 Version 2009121601
 + When use()ing from test files, look in t first. Fixes issue #52824.
 + POD and Kwalitee tests.
